# austin-tui

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: checks.yml  release.yml  tests.yml
austin_tui/: __init__.py  __main__.py  adapters.py  controller.py  stats.py  tui.py
austin_tui/adapters/: __init__.py
austin_tui/controllers/: __init__.py  austin.py  system.py
austin_tui/model/: __init__.py  austin.py  system.py
austin_tui/models/: __init__.py  austin.py  system.py
austin_tui/view/: __init__.py  austin.py  palette.py  tui.austinui
austin_tui/widgets/: __init__.py  box.py  catalog.py  command_bar.py  graph.py  label.py  markup.py  pad.py  scroll.py  selector.py  table.py  window.py
test/: target.py
tests/: mcurses.py  target.py  test_point.py  test_view.py  test_widgets.py
