# This file is part of "austin-tui" which is released under GPL.
#
# See file LICENCE or go to http://www.gnu.org/licenses/ for full license
# details.
#
# austin-tui is a Python wrapper around Austin, the CPython frame stack
# sampler.
#
# Copyright (c) 2018-2020 Gabriele N. Tornetta <phoenix1987@gmail.com>.
# All rights reserved.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[tool.poetry]
authors = ["Gabriele N. Tornetta <phoenix1987@gmail.com>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
description = "The top-like text-based user interface for Austin"
documentation = "https://austin-tui.readthedocs.io"
homepage = "https://github.com/P403n1x87/austin-tui"
keywords = ["performance", "profiling", "testing", "development"]
license = "GPL-3.0-or-later"
name = "austin-tui"
packages = [
  {include = "austin_tui"},
]
readme = "README.md"
repository = "https://github.com/P403n1x87/austin-tui"
version = "0.0.0"

[tool.isort]
profile = "google"

[tool.poetry.scripts]
austin-tui = "austin_tui.__main__:main"

[tool.poetry.dependencies]
austin-python = {version = "^1.1.0*", allow-prereleases = true}
importlib-resources = "^2.0.1"
lxml = "^4.5.1"
python = "^3.7"
windows-curses = {version = "^2.1.0", markers = "sys_platform == 'win32'"}

[tool.poetry.dev-dependencies]
codecov = "^2.1.3"
coverage = {extras = ["toml"], version = "*"}
mypy = "^0.910"
nox = "^2020.5.24"
pytest = ">=5.4.2"
pytest-cov = ">=2.8.1"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.10.3"

[tool.poetry.urls]
issues = "https://github.com/P403n1x87/austin-tui/issues"

[tool.poetry-dynamic-versioning]
enable = true

[tool.coverage.run]
branch = true
source = ["austin_tui"]

[tool.coverage.report]
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
